--- a/portal.html
+++ b/portal.html
@@ -67,6 +67,7 @@
                 <li><a href="#/admin" ng-click="createIcon()">Icon</a></li>
                 <li><a href="#/admin" ng-click="createStyle()">Style</a></li>
                 <li><a href="#/admin" ng-click="createCat()">Category</a></li>
+                <li><a href="#/admin" ng-click="createTFN()">TFN</a></li>
             </ul>
             <!--<section class="dropdown-menu aside-xl on animated fadeInLeft no-borders lt">-->
                 <!--<div class="wrapper lter m-t-n-xs">-->
@@ -145,6 +146,7 @@
                 <li><a href="#/admin" ng-click="loadIconsLst()">Icon</a></li>
                 <li><a href="#/admin" ng-click="loadStyleLst()">Styles</a></li>
                 <li><a href="#/admin" ng-click="loadCatLst()">Categories</a></li>
+                <li><a href="#/admin" ng-click="loadTFNLst()">TFN</a></li>
             </ul>
         </li>
         <li class="dropdown" ng-show="adminSession">
@@ -178,6 +180,7 @@
                 <li><a href="#/admin" ng-click="loadIconFields()">Icons</a></li>
                 <li><a href="#/admin" ng-click="loadStyleFields()">Styles</a></li>
                 <li><a href="#/admin" ng-click="loadCatFields()">Categories</a></li>
+                <li><a href="#/admin" ng-click="loadCCNumFields()">TFN</a></li>
             </ul>
         </li>
         <!--<li><a href="#">-->
