--- a/admin/templ/widgets/consumer.html
+++ b/admin/templ/widgets/consumer.html
@@ -1,11 +1,11 @@
-<a href="#layout"   class="active">
+<a href="#"   class="active">
     <i class="fa fa-filter icon">
         <b class="bg-warning"></b>
     </i>
-    <span class="pull-right">
-      <i class="fa fa-angle-down text"></i>
-      <i class="fa fa-angle-up text-active"></i>
-    </span>
+    <!--<span class="pull-right">-->
+      <!--<i class="fa fa-angle-down text"></i>-->
+      <!--<i class="fa fa-angle-up text-active"></i>-->
+    <!--</span>-->
     <span>{{w.title}}</span>
 </a>
 <ul class="nav lt" style="display: block" ng-controller="consumerctrl">
