--- a/tenants/Bridgevine/532e1a6fdecbaf771c000053.html
+++ b/tenants/Bridgevine/532e1a6fdecbaf771c000053.html
@@ -4,7 +4,7 @@
 
     <div class="row gradient-container">
         <div class="gradient-item clearfix">
-            <div class="col-xs-4" style="padding-top:10px;">{{emailPrompt}}</div>
+            <div class="col-xs-4" style="padding-top:10px;">{{step.prompt}}</div>
             <div class="col-xs-5"><input type="text" class="form-control mb0" placeholder="enter email address" ng-model="c.email" ng-hide="emailed"></div>
             <div class="col-xs-3"><button class="btn btn-style1 uppercase" ng-click="emailList()" ng-hide="emailed">Submit</button></div>
         </div>
