--- a/tenants/Bridgevine/tpv.html
+++ b/tenants/Bridgevine/tpv.html
@@ -2,13 +2,17 @@
     <div class="aside-xxl"><a class="navbar-brand block" href="#"></a>
         <section class="panel panel-default">
             <div class="panel-body">
-                <p>{{step.prompt}}</p>
+                <div class="alert" ng-class="tpvstatusclass">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <i class="fa fa-ban-circle"></i><a href="#" class="alert-link">{{step.prompt}}</a>
+                </div>
                 <div class="input-group">
                     <input class="form-control" ng-model="c.mobil" placeholder="Mobile or Home Number">
                     <span class="input-group-btn">
                       <button ng-click="confirmCustomer()" class="btn btn-info btn-icon"><i class="fa fa-phone"></i></button>
                     </span>
                 </div>
+
                 <div class="btn-group">
                     <!--<button type="button" class="btn btn-sm btn-dark btn-icon"></button>-->
                     <div class="btn-group hidden-nav-xs">
