--- a/cctmpl.html
+++ b/cctmpl.html
@@ -42,6 +42,7 @@
     <script src="ctrl/agentctrl.js" type="text/javascript"></script>
     <script src="ctrl/todoctrl.js" type="text/javascript"></script>
     <script src="ctrl/agentprodctrl.js" type="text/javascript"></script>
+    <script src="ctrl/confirmationctrl.js" type="text/javascript"></script>
     <script src="ctrl/consumerctrl.js" type="text/javascript"></script>
     <script src="ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="ctrl/salesctrl.js" type="text/javascript"></script>
@@ -68,7 +69,7 @@
     </ul>
 </div>
     <section class="hbox stretch" ng-show="agent">
-        <aside class="bg-light lter b-r aside-xl hidden-print nav-xs-left" id="agenttools">
+        <aside class="bg-light lter b-r aside-xl hidden-print nav-xs-left" id="agenttools" ng-show="leftbarshow">
             <section class="vbox">
                 <header class="header bg-primary lter text-center clearfix">
                     <div class="row">
@@ -112,7 +113,11 @@
             <section class="vbox">
                 <header class="header bg-primary lter text-center clearfix">
                     <div class="row">
-                        <div class="form-group col-sm-2" ng-repeat="w in allwidgets">
+                        <div class="col-sm-2">
+                            <i class="fa fa-columns"></i>
+                            <input type="checkbox" class="form-control" checked ng-click="toggleLeft()">
+                        </div>
+                        <div class="col-sm-2" ng-repeat="w in allwidgets">
                             <i class="fa " ng-class="w.image"></i>
                             <input type="checkbox" class="form-control" ng-model="w.show">
                         </div>
