--- a/tenants/Bridgevine/bvtmpl.html
+++ b/tenants/Bridgevine/bvtmpl.html
@@ -36,6 +36,7 @@
     <script src="../../ctrl/cartadminctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/prodctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/agentprodctrl.js" type="text/javascript"></script>
+    <script src="../../ctrl/confirmationctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/teaserctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/surveyctrl.js" type="text/javascript"></script>
     <script src="../../ctrl/optctrl.js" type="text/javascript"></script>
